[package]
name = "Supernova"
version = "0.5.0"
authors = ["Group CDLW <chenyifan0701@foxmail.com>"]
edition = "2025"
repository = "https://github.com/fannyycyff471/Supernova.git"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 3

[dependencies]
bevy = { version = "0.16", features = ["bevy_remote"] }
leafwing-input-manager = "0.17"
rand = "0.8"
bevy_hanabi = "0.16"
avian2d = { version = "0.3" , features = [ "debug-plugin" ] } 